tests/fixtures/invalid/pow_str_bool_bytes.py
# Cannot call pow() with Str, Bool, Bytes
x = pow("hello", True, b"hello")
